--- a/substyles/NotebookTree.css
+++ b/substyles/NotebookTree.css
@@ -13,7 +13,7 @@
 }
 .qvt-sheet {
 	background-color: #ffffff;
-    background: url(../img/background2.png);
+    background: url("https://github.com/iviasensio/Presentation/blob/main/img/Background2.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
